...
            Navigator.push(context,
                MaterialPageRoute(builder: (context) => const navigation()));
          } else {
            Navigator.pushNamed(context, '/registerview');
          }
        },
        buttonLabel: 'إنشاء حساب',
        buttonColor: Color(0xff1A535C) //Color.fromRGBO(255, 230, 109, 1),
        );
    //Sign up button
    final signupButton = Padding(
      padding: const EdgeInsets.all(10),
      child: ElevatedButton(
...
                                    dotAll: true)
                                .hasMatch(name)) {
                              return "يجب ان يحتوي الأسم على أحرف فقط";
                            } else if (name.length > 20) {
                              return "يجب ان يكون الاسم اقل من 20 حرف";
                            }
                            nameField = true;
                            return null;
                          },
                        ),
                        SizedBox(
                          height: 15,
                        ),
...
                              return "الرجاء إدخال بريدك الإلكتروني";
                            }

                            if (!regexemail.hasMatch(email)) {
                              return 'بريدك الإلكتروني غير صحيح';
                            }
                            emailField = true;
                            return null;
                          },
                        ),
                        SizedBox(
                          height: 15,
                        ),
...
                            }
                            if (!(password.contains(new RegExp(r'[A-Z]')) &&
                                password.contains(new RegExp(r'[0-9]')) &&
                                password.contains(new RegExp(r'[a-z]')))) {
                              return 'الرجاء إدخال كلمة مرور تحتوي على حرف كبير وصغير ورقم';
                            }
                            passwordField = true;
                            return null;
                          },
                        ),
                        SizedBox(
                          height: 15,
                        ),
...
